feat: Add support for custom justifications
- Added a way to specify a class implements a Java marker
  interface. For interfaces with methods, further work is needed.